added some more match logic, added jQuery to push modal.

--- a/app/public/css/style.css
+++ b/app/public/css/style.css
@@ -122,7 +122,7 @@ form {
     background: #00d9ff;
 }
 
-#modal-pic {
+#match-pic {
     max-width: 100%;
     height: auto;
     border-radius: 50%;
