fixed modal and images

--- a/app/public/css/style.css
+++ b/app/public/css/style.css
@@ -68,58 +68,16 @@ form {
 }
 
 /* Styling for the modal results pop-up. */
-.modalDialog {
-    position: fixed;
-    font: 400 20px Lato, sans-serif;
-    font-weight: bold;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    background: rgb(126, 235, 235);
-    z-index: 99999;
-    opacity: 0;
-    -webkit-transition: opacity 400ms ease-in;
-    -moz-transition: opacity 400ms ease-in;
-    transition: opacity 400ms ease-in;
-    pointer-events: none;
+.modal-header {
+    background-color: aquamarine;
 }
 
-.modalDialog:target {
-    opacity: 1;
-    pointer-events: auto;
+.modal-body {
+    background-color: lightgrey;
 }
 
-.modalDialog>div {
-    width: 400px;
-    position: relative;
-    margin: 10% auto;
-    padding: 5px 20px 13px 20px;
-    border-radius: 10px;
-    background: #fff;
-    background: -moz-linear-gradient(#fff, #999);
-    background: -webkit-linear-gradient(#fff, #999);
-    background: -o-linear-gradient(#fff, #999);
-}
-
-.close {
-    background: #606061;
-    color: #FFFFFF;
-    line-height: 25px;
-    position: absolute;
-    right: -12px;
-    text-align: center;
-    top: -10px;
-    width: 24px;
-    text-decoration: none;
-    font-weight: bold;
-    -webkit-border-radius: 12px;
-    -moz-border-radius: 12px;
-    border-radius: 12px;
-}
-
-.close:hover {
-    background: #00d9ff;
+.modal-footer {
+    background-color: aquamarine;
 }
 
 #match-pic {
@@ -128,7 +86,7 @@ form {
     border-radius: 50%;
 }
 
-#modal-text {
+#match-message {
     text-align: center;
-    font-size: 12px;
+    font-size: 16px;
 }
